name:                new-template
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Model
                     , PoissonModel
                     , Random
                     , User
                     , Interface
                     , TreeCSMACD
                     , GiaStation
                     , BasicTreeUser
  other-modules:       AlohaUser
                     , Common
                     , Lib
                     , TwoBufferQueue
                     , BoundedQueue
                     , NoMemStation
                     , NoiselessChannel
                     , NoisyChannel
                     , Signals
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , random
                     , mtl
                     , random-fu
  default-language:    Haskell2010

executable new-template-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O3
  build-depends:       base
                     , lens
                     , random
                     , mtl
                     , random-fu
                     , new-template
  default-language:    Haskell2010

test-suite new-template-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , new-template
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
